apps/playground/argocd-ingress/chart/argocd-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-nodeport
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: argocd-server
  ports:
    - name: https
      port: 443
      targetPort: 8080
      nodePort: 30444
      protocol: TCP
